--- a/project-instructions/1-discover-and-define-problem/1.1-player-motivations.md
+++ b/project-instructions/1-discover-and-define-problem/1.1-player-motivations.md
@@ -1,6 +1,9 @@
 # 1.1 Player Motivations
 
-TK
+TK - placeholder - in progress
+
+{% tabs %}
+{% tab title="✓ TASK" %}
 
 Students take survey to determine their own gamer motivation profile
 
@@ -8,3 +11,22 @@ Later, they will select a set of motivations to use as the basis for their targe
 
 ![](../../.gitbook/assets/gamer-motivation-model.png)
 
+### **❏ Deliverable**
+
+Submit your ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+{% endtabs %}
