--- a/project-instructions/1-discover-and-define-problem/1.2-incentives-and-flow.md
+++ b/project-instructions/1-discover-and-define-problem/1.2-incentives-and-flow.md
@@ -1,7 +1,9 @@
 # 1.2 Incentives and Flow
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Brief exploration of psychology of motivation - what motivates people to perform certain behaviors?  Many theories. Many applications \(learning, work, etc.\).
 
 In games, two commonly-used motivation theories are incentives \(rewards & punishments\) and flow. These can be applied in addition to the gamer motivations \(such as competition, etc.\).
@@ -12,3 +14,22 @@ Students will analyze use of incentives and flow in various games.
 
 ![](../../.gitbook/assets/flow-challenge-vs-skill.png)
 
+### **❏ Deliverable**
+
+Submit your ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+{% endtabs %}
