--- a/project-instructions/1-discover-and-define-problem/1.2-incentives-and-flow.md
+++ b/project-instructions/1-discover-and-define-problem/1.2-incentives-and-flow.md
@@ -14,19 +14,22 @@ Students will analyze use of incentives and flow in various games.
 
 ![](../../.gitbook/assets/flow-challenge-vs-skill.png)
 
-## **❏ Deliverable**
+### **❏ Deliverable**
 
 Submit your ...
+
 {% endtab %}
 
 {% tab title="➤ EXAMPLE" %}
 example of deliverable
+
 {% endtab %}
 
 {% tab title="★ RUBRIC" %}
 | **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
 | :--- | :--- | :--- |
 | Description | Description | Description |
-{% endtab %}
-{% endtabs %}
 
+{% endtab %}
+
+{% endtabs %}
