--- a/project-instructions/1-discover-and-define-problem/1.3-game-design-elements.md
+++ b/project-instructions/1-discover-and-define-problem/1.3-game-design-elements.md
@@ -1,10 +1,32 @@
 # 1.3 Game Design Elements
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 What is a game?  What elements make something a game?
 
 Students will generate affinity diagram of game design elements & then compare to a reference list.
 
 Students will apply by analyzing game design elements of example games.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
