--- a/project-instructions/1-discover-and-define-problem/1.4-game-code-tutorials.md
+++ b/project-instructions/1-discover-and-define-problem/1.4-game-code-tutorials.md
@@ -2,6 +2,8 @@
 
 TK
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Students will complete coding tutorials that show them how to create sample video games using the Phaser CE JavaScript game framework.
 
 Each student should complete the coding tutorials, in order to gain experience with coding \(even if he or she will not necessarily become the primary coder for their team\).  It may be helpful if students pair up or work with their teammates to help each understand the code and successfully complete the tutorials.
@@ -23,5 +25,24 @@ Other possibilities for tutorials:
 * A tutorial focused on using Piskel to make a spritesheet for an animated sprite \(such as a character\).
 * A tutorial focused on using ChipTone to make a custom sound effect.
 
+### **❏ Deliverable**
 
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
 
