--- a/project-instructions/1-discover-and-define-problem/1.5-target-player-persona.md
+++ b/project-instructions/1-discover-and-define-problem/1.5-target-player-persona.md
@@ -1,8 +1,29 @@
 # 1.5 Target Player Persona
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will create a persona that includes the player motivations and player experience goals for the target player of the game that the team will \(later\) design and develop.
 
 The target player persona helps set some constraints for generating \(and refining\) game ideas and selecting a final game concept to design and develop.
+### **❏ Deliverable**
 
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
