--- a/project-instructions/1-discover-and-define-problem/1.6-game-ideas.md
+++ b/project-instructions/1-discover-and-define-problem/1.6-game-ideas.md
@@ -1,6 +1,28 @@
 # 1.6 Game Ideas
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will generate multiple ideas for elements of a game that appeal to the target player persona.  Students will ideate as individuals, and then as a team.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
