--- a/project-instructions/1-discover-and-define-problem/1.7-game-treatments.md
+++ b/project-instructions/1-discover-and-define-problem/1.7-game-treatments.md
@@ -1,10 +1,32 @@
 # 1.7 Game Treatments
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will evaluate and refine their game ideas to select top 3 concepts.
 
 Teams will create a game treatment for each of the top 3 game concepts.
 
 Teams will gather external feedback to evaluate the game treatments. Then the teams will select one game treatment \(which can be refined\) to propose as their team project.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
