--- a/project-instructions/1-discover-and-define-problem/1.8-proposal-presentation.md
+++ b/project-instructions/1-discover-and-define-problem/1.8-proposal-presentation.md
@@ -1,6 +1,28 @@
 # 1.8 Proposal Presentation
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams present their proposed game to the class for critique.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
