--- a/project-instructions/2-design-and-build-solution/2.1-project-schedule.md
+++ b/project-instructions/2-design-and-build-solution/2.1-project-schedule.md
@@ -1,8 +1,29 @@
 # 2.1 Project Schedule
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams draft a project schedule for the tasks related to designing and developing their game.
 
 ![](../../.gitbook/assets/video-game-phase2.png)
+### **❏ Deliverable**
 
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
