--- a/project-instructions/2-design-and-build-solution/2.2-game-design-document.md
+++ b/project-instructions/2-design-and-build-solution/2.2-game-design-document.md
@@ -1,6 +1,28 @@
 # 2.2 Game Design Document
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams create a game design document to identify all the elements of their game \(structural, dramatic, and artistic\). The GDD will guide all of their development of the game's code and assets \(art and sound\).
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
