--- a/project-instructions/2-design-and-build-solution/2.3-paper-prototype.md
+++ b/project-instructions/2-design-and-build-solution/2.3-paper-prototype.md
@@ -1,6 +1,28 @@
 # 2.3 Paper Prototype
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will use their game design document to create a paper prototype of their game.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
