--- a/project-instructions/2-design-and-build-solution/2.4-playtest-prototype.md
+++ b/project-instructions/2-design-and-build-solution/2.4-playtest-prototype.md
@@ -1,8 +1,30 @@
 # 2.4 Playtest Prototype
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will evaluate their game design by playtesting the paper prototype \(both internally by the team, and externally by other people\).
 
 Teams will use this feedback to refine their game design document.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
