--- a/project-instructions/2-design-and-build-solution/2.5-program-game.md
+++ b/project-instructions/2-design-and-build-solution/2.5-program-game.md
@@ -1,8 +1,30 @@
 # 2.5 Program Game
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will code their video game based on their game design document.
 
 A suggested order of what to code first will be provided.  Emphasis will be on programming a minimal viable product \(MVP\) version of the game, rather than a full version.  The game needs to be a playable demo that highlights the game design, but may not necessarily incorporate all envisioned features.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
