--- a/project-instructions/2-design-and-build-solution/2.6-game-assets.md
+++ b/project-instructions/2-design-and-build-solution/2.6-game-assets.md
@@ -1,10 +1,32 @@
 # 2.6 Game Assets
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will create the assets \(art and sound\) for their game.  In the meantime, the team's coder can use placeholder assets to program the game. As the final assets are completed, they can be incorporated into the team's game.
 
 Art assets might include:  animated sprites, static images, backgrounds, UI icons, etc.
 
 Sound assets might include:  sound effects, voice effects, background music, etc.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
