--- a/project-instructions/2-design-and-build-solution/2.7-internal-playtesting.md
+++ b/project-instructions/2-design-and-build-solution/2.7-internal-playtesting.md
@@ -1,6 +1,28 @@
 # 2.7 Internal Playtesting
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams should be internally playtesting and refining their game throughout development to ensure that the game mechanics and assets work as intended.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
