--- a/project-instructions/2-design-and-build-solution/2.8-solution-presentation.md
+++ b/project-instructions/2-design-and-build-solution/2.8-solution-presentation.md
@@ -1,6 +1,28 @@
 # 2.8 Solution Presentation
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will present their game demos to the class for critique.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
