--- a/project-instructions/3-evaluate-and-refine-solution/3.1-solution-evaluation.md
+++ b/project-instructions/3-evaluate-and-refine-solution/3.1-solution-evaluation.md
@@ -1,8 +1,30 @@
 # 3.1 Solution Evaluation
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will evaluate their game demos through external playtesting and a survey.
 
 Teams will then analyze the data to identify issues and possible fixes.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
