--- a/project-instructions/3-evaluate-and-refine-solution/3.2-solution-refinements.md
+++ b/project-instructions/3-evaluate-and-refine-solution/3.2-solution-refinements.md
@@ -1,6 +1,28 @@
 # 3.2 Solution Refinements
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will implement high-priority / high-feasibility improvements to their game based on the available time and resources.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
