--- a/project-instructions/3-evaluate-and-refine-solution/3.3-project-poster.md
+++ b/project-instructions/3-evaluate-and-refine-solution/3.3-project-poster.md
@@ -1,6 +1,28 @@
 # 3.3 Project Poster
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 A team member will create a project poster to explain how the team designed, developed, and tested their game.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
