--- a/project-instructions/3-evaluate-and-refine-solution/3.4-evaluation-presentation.md
+++ b/project-instructions/3-evaluate-and-refine-solution/3.4-evaluation-presentation.md
@@ -1,6 +1,28 @@
 # 3.4 Evaluation Presentation
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will present their evaluation findings & refinements to the class for critique.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
