--- a/project-instructions/4-share-project-with-public/4.1-public-presentation.md
+++ b/project-instructions/4-share-project-with-public/4.1-public-presentation.md
@@ -1,6 +1,28 @@
 # 4.1 Public Presentation
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Teams will present their game demos at a public poster presentation.
 
+### **❏ Deliverable**
+
+Submit your team's ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
