--- a/project-instructions/4-share-project-with-public/4.2-project-reflection.md
+++ b/project-instructions/4-share-project-with-public/4.2-project-reflection.md
@@ -1,6 +1,28 @@
 # 4.2 Project Reflection
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Students will reflect on the project as individuals, teams, and class.
 
+### **❏ Deliverable**
+
+Submit your ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
