--- a/project-instructions/4-share-project-with-public/4.3-class-celebration.md
+++ b/project-instructions/4-share-project-with-public/4.3-class-celebration.md
@@ -1,6 +1,28 @@
 # 4.3 Class Celebration
 
-TK
+TK - placeholder - in progress
 
+{% tabs %}
+{% tab title="✓ TASK" %}
 Students will celebrate and recognize others for their contributions
 
+### **❏ Deliverable**
+
+Submit your ...
+
+{% endtab %}
+
+{% tab title="➤ EXAMPLE" %}
+example of deliverable
+
+{% endtab %}
+
+{% tab title="★ RUBRIC" %}
+
+| **✓- Below Standard** | **✓ Meets Standard** | **✓+ Exceeds Standard** |
+| :--- | :--- | :--- |
+| Description | Description | Description |
+
+{% endtab %}
+
+{% endtabs %}
