--- a/project-instructions/2-design-and-build-solution/2.3-paper-prototype.md
+++ b/project-instructions/2-design-and-build-solution/2.3-paper-prototype.md
@@ -27,10 +27,12 @@ Here are some videos demonstrating paper prototypes of video games:
    * Any game objects \(such as: obstacles, etc.\) that will **NOT** move or change during playtesting can be drawn directly on the game world. 
    * Any characters \(player, enemies, etc.\) or game objects \(resources, etc.\) that will **move or change** should be created as separate parts.
    * Many games display certain gameplay information \(such as: score, etc.\). Determine if there is certain information \(such as: health, etc.\) that will be important to show in your prototype during playtesting.
+2. **Take 2-3 photos of your paper prototype showing different points in the gameplay.**
+  * Annotate the photos with labels to identify the characters and key game objects and explain what is being shown. 
 
 ### **❏ Deliverable**
 
-Submit 2-3 photos of your paper prototype that show different points in the gameplay
+Submit your team's photos of your paper prototype
 {% endtab %}
 
 {% tab title="➤ EXAMPLE" %}
@@ -43,4 +45,3 @@ example
 | Description | Description | Description |
 {% endtab %}
 {% endtabs %}
-
